--- a/WSRestService/src/main/webapp/WEB-INF/web.xml
+++ b/WSRestService/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,18 @@
         <param-name>resteasy.servlet.mapping.prefix</param-name>
         <param-value>/rest</param-value>
     </context-param>
+    <filter>
+        <filter-name>JPA</filter-name>
+        <filter-class>org.rest.service.filters.JpaFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>JPA</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+    <resource-ref>
+        <res-ref-name>jdbc/H2DB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+        <res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
 </web-app>
